# volfi

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  NOTICE.md  README.md
bench/: bench_lbr_compare.cpp  bench_otm_grid.cpp
bindings/: README.md
bindings/R/: bench_volfiR.R
bindings/R/volfiR/: DESCRIPTION  LICENSE  NAMESPACE  README.md
bindings/R/volfiR/R/: volfi.R
bindings/R/volfiR/man/: volfiR.Rd
bindings/R/volfiR/src/: Makevars  volfi_rcpp.cpp
bindings/R/volfiR/tests/: testthat.R
bindings/R/volfiR/tests/testthat/: test-accuracy.R
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/examples/: bench_vollib.py  quickstart.py
bindings/python/src/: volfi_py.cpp
bindings/python/src_py/volfi/: __init__.py
bindings/python/src_py/volfi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bindings/python/tests/: test_volfi.py
bindings/r/: DESCRIPTION  LICENSE  NAMESPACE  README.md  configure  configure.win
bindings/r/R/: volfi.R
bindings/r/inst/bench/: bench_volfiR.R
bindings/r/inst/examples/: demo.R
bindings/r/man/: volfiR.Rd
bindings/r/src/: Makevars  Makevars.win  RcppExports.cpp  volfi.hpp  volfiR.cpp  volfi_rcpp.cpp
bindings/r/src/volfi_annulus/: paper_volfi.hpp  volfi_annulus.hpp  volfi_annulus_broadrange.hpp  volfi_annulus_wing.hpp
bindings/r/tests/testthat/: test-accuracy.R  test-basic.R
docs/: README.md
docs/technical_note/: volfi_technical_documentation.tex
include/volfi/: tmp_base.hpp  volfi.hpp  volfi_annulus_all.hpp  volfi_annulus_endpoint_vec.hpp  volfi_annulus_tables.hpp  volfi_fastpatch.hpp  volfi_logc_libm.hpp  volfi_reorder.hpp
paper/: .gitignore  main.tex  refs.bib
reproduce/: BENCHMARK_PROTOCOL.md  Makefile  README.md  accuracy_vs_lbr.cpp  benchmark_vec.cpp  fixed_bench.cpp  smoke_test.cpp  verify_vec.cpp  warm_test.cpp
reproduce/results/: run256_1.txt  run256_2.txt  run256_3.txt  run256_4.txt  run256_5.txt  run512_1.txt  run512_2.txt  run512_3.txt  run512_4.txt  run512_5.txt
tests/: test_atm.cpp  test_domain.cpp  test_edge_grid.cpp  test_fastpatch.cpp  test_otm_grid.cpp  test_random_delta.cpp  test_random_low_delta.cpp  test_random_true_otm.cpp  test_random_v_delta.cpp  test_true_otm_grid.cpp
